2002-06-01  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 0.18.0

2002-05-31  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/coil/plugins/portforward.py, twisted/tap/portforward.py:
	  Forgot to add these before rc1 :-) You can use the portforwarder
	  with Coil and mktap again (previously "stupidproxy")

	* twisted/web/static.py: Fixed a bunch of bugs related to redirection
	for directories.

	* .: Releasing Twisted 0.18.0rc2

2002-05-30  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* Twisted no longer barfs when the Python XML packages aren't available.

2002-05-29  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 0.18.0rc1

2002-05-25  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/spread/pb.py, twisted/internet/defer.py, 
	  twisted/python/failure.py, etc:
	  
	  Perspective broker now supports Failures! This should make writing
	  robust PB clients *much* easier. What this means is that errbacks will
	  recieve instances of t.python.failure.Failure instead of just strings
	  containing the traceback -- so you can easily .trap() particular
	  errors and handle them appropriately.

2002-05-24  Itamar Shtull-Trauring, Moshe Zadka <moshez@twistedmatrix.com>

	* twisted.mail cleanups:

		* basic bounce support.

		* removed telnet from mail tap

		* mail domains now receive service in __init__

		* split file system stuff into Queue (renamed from 
	          MessageCollection)

		* Put a Queue in service

	* twisted/protocol/smtp.py: changed SMTPClient API so that it returns
	a file for the message content, instead of a string.

2002-05-23  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* Twisted applications can now be persisted to XML files (.tax) with
	the --xml option -- this is pretty verbose and needs some optimizations.
	
2002-05-22  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/persisted/marmalade.py: Marmalade: Jelly, with just a hint